// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image circular variant render 1`] = `
<div>
  <img
    alt="Circular image"
    class="Image-circular Image-root"
    src="localhost"
  />
</div>
`;

exports[`Image renders 1`] = `
<div>
  <img
    alt="Default image"
    class="Image-root"
    src="localhost"
  />
</div>
`;
